# pandas-and-numpy

./: .gitignore  LICENSE  NumPy.ipynb  README.md  TODO.md  churn_risk_analysis.csv  clean_orders.csv  cohort_dashboard.csv  cohort_retention_real.csv  high_impact_quarters.csv  mistakes.md  pyproject.toml  raw_events.csv  regional_activity.csv  regional_sales_wide.csv  requirements.txt  sales_wide.csv  transactions.csv  untitled.md
.github/workflows/: ci.yml
data/: README.md
data/output/: Regional_Sales_Audit_Summary.csv  channel_pairs_long.csv  clean_orders_legacy  customer_master.csv  event_metrics_2023.csv  metrics_by_region.csv  product_concentration_summary.csv
data/raw/: billing_raw.csv  channel_sales_wide.csv  crm_raw.csv  orders.csv  sessions.csv  users.csv
docs/: GITHUB_PROFILE.md  PRIORITY_TASKS.md  SHOWCASE.md
docs/samples/: Regional_Sales_Audit_Summary.csv  channel_pairs_long.csv  churn_risk_analysis.csv  (+9 more)
notebooks/: 00-index.ipynb  01-numpy-tasks.ipynb  01-numpy.ipynb  02-pandas-fundamentals-tasks.ipynb  02-pandas-fundamentals.ipynb  03-pandas-pipelines-tasks.ipynb  03-pandas-pipelines.ipynb  04-pandas-business-tasks.ipynb  04-pandas-business.ipynb  NumPy.ipynb
notes/: HINTS.en.md  HINTS.md  HINTS.ru.md  PROGRESS.md  mistakes.md
scripts/: README.md  build_lang_task_notebooks.py  clear_notebook_outputs.py  convert_tasks_markdown.py  export_samples.py  fix_csv_paths.py  fix_solution_quality.py  run_solution_notebooks.py  split_hints_lang.py  split_notebooks.py  task_notebook_content.py
tests/: conftest.py  test_outputs.py  test_raw_data.py
(+10 files in other folders)
